Atualizado por profesor

--- a/Tarea 2.ipynb
+++ b/Tarea 2.ipynb
@@ -75,6 +75,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dad166d6",
+   "metadata": {},
+   "source": [
+    "# Calificación: 7.0\n",
+    "\n",
+    "No se pedía tener floats..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cfee3cca-c352-4804-8be7-307a42060136",
