--- a/Tarea 3.ipynb
+++ b/Tarea 3.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dbe1353e-9ea8-48fe-8243-3dc3079be999",
    "metadata": {},
    "source": [
     " # Tarea 3.8 #\n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1d4089de-d213-42a1-9271-44567e5f8f38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "629968d0-0a36-4938-b4dc-1889c86e03f2",
    "metadata": {},
    "source": [
     "Para calcular $\\pi$ utilizamos la serie de Taylor del coseno inverso de 1/2 la cual es:\n",
@@ -45,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "7b38e4fb-92ea-4f0a-b41a-ecd4632fb8d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ec70385e-d53d-4da8-9b88-e52530f2f954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "cc5bcc18-7ecc-40be-b61d-16cb536eb5fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c762797e-5656-4184-8e70-158f64d36b9c",
    "metadata": {},
    "outputs": [
     {
@@ -146,19 +139,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d3fd50-24ba-44e1-8e79-02baf4207c02",
    "metadata": {},
    "source": [
     "Finalmente podemos ver que la serie de taylor del coseno inverso converge mucho mas rapidamente que las obtenidas en clase"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c0b3dc1-8256-4337-bf69-d257c4705d8a",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificacion: 7.0"
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +168,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
