--- a/Tarea 8.ipynb
+++ b/Tarea 8.ipynb
@@ -301,7 +301,7 @@
    "id": "933f14d3-70b4-4385-935f-94100fb6d695",
    "metadata": {},
    "source": [
-    "En este error relativo podemos dar cuenta del error que existe en el gráfico y como el erro va aumentando a medida que los valores se hacen más altos."
+    "En este error relativo podemos dar cuenta del error que existe en el gráfico y como el error va aumentando a medida que los valores se hacen más altos."
    ]
   }
  ],
