--- a/Tarea 9.ipynb
+++ b/Tarea 9.ipynb
@@ -71,6 +71,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02165694-09b6-4961-9bf8-aa105b0e127a",
+   "metadata": {},
+   "source": [
+    "Para e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cbd588d-9796-49f7-8c6f-01831a6a6123",
    "metadata": {},
    "source": [
