--- a/Tarea 9.ipynb
+++ b/Tarea 9.ipynb
@@ -74,7 +74,7 @@
    "id": "02165694-09b6-4961-9bf8-aa105b0e127a",
    "metadata": {},
    "source": [
-    "Para e"
+    "Para los pasos de simpson necesitamos que n sea mayor que 2 y que todos los n sean pares."
    ]
   },
   {
